--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "compile":"yarn typecheck && cp -r build/contracts client/src",
     "generate-types": "typechain --target=truffle-v5 'build/contracts/*.json'",
-    "migrate": "tsc -p ./tsconfig.migration.json && truffle migrate",
-    "typecheck": "truffle compile && yarn generate-types && tsc --noEmit",
-    "test": "tsc -p ./tsconfig.test.json && truffle test"
+    "migrate": "tsc && truffle migrate",
+    "typecheck": "truffle compile && yarn generate-types",
+    "test": "tsc && truffle test"
   },
   "dependencies": {
     "truffle": "^5.1.22",
