--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   },
   "license": "MIT",
   "version": "0.0.1",
+  "watch": {
+    "compile": {
+      "patterns": [
+        "contracts"
+      ],
+      "extensions": "sol",
+      "quiet": false
+    }
+  },
   "scripts": {
-    "compile":"yarn typecheck && cp -r build/contracts client/src",
+    "compile": "yarn typecheck && cp -r build/contracts client/src",
+    "compile:watch": "npm-watch compile",
     "generate-types": "typechain --target=truffle-v5 'build/contracts/*.json'",
     "migrate": "tsc && truffle migrate",
     "typecheck": "truffle compile && yarn generate-types",
@@ -25,6 +35,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/web3": "^1.2.2",
+    "npm-watch": "^0.11.0",
     "truffle-typings": "^1.0.8",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
